--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-sprotbrough-doncaster.html">
 
-<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Sprotbrough, Doncaster. Local, reliable service for homes and small businesses. Call 07735 873694.">
+<meta name="description" content="Reliable gutter clearing, cleaning, repairs and replacement in Sprotbrough, Doncaster. Protect your property from water damage. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
@@ -47,9 +47,9 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "logo":"https://homerepairs4u.com/images/logo.webp",
 "image":"https://homerepairs4u.com/images/logo.webp",
 "telephone":"+447735873694",
-"address":{"@type":"PostalAddress","addressRegion":"South Yorkshire","addressCountry":"GB"},
 "openingHours":"Mo-Su 07:00-20:00",
-"areaServed":["Sprotbrough","Doncaster","Bentley","Scawthorpe","Balby"],
+"address":{"@type":"PostalAddress","addressRegion":"South Yorkshire","addressCountry":"GB"},
+"areaServed":["Sprotbrough","Doncaster","Scawthorpe","Bentley","Balby"],
 "priceRange":"£50–£3000"
 }
 </script>
@@ -59,25 +59,11 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 {
 "@context":"https://schema.org",
 "@type":"Service",
-"@id":"https://homerepairs4u.com/local/gutter-services-sprotbrough-doncaster.html#service",
-"name":"Gutter Clearing, Cleaning and Replacement in Sprotbrough",
-"description":"Professional gutter clearing, cleaning, repairs and full replacement for residential and small commercial properties in Sprotbrough, Doncaster.",
+"name":"Gutter Services in Sprotbrough, Doncaster",
+"description":"Professional gutter clearing, cleaning, repairs and full gutter replacement for residential and small commercial properties in Sprotbrough.",
 "provider":{"@id":"https://homerepairs4u.com/#business"},
 "areaServed":{"@type":"Place","name":"Sprotbrough, Doncaster"},
 "serviceType":["Gutter clearing","Gutter cleaning","Gutter repairs","Gutter replacement"]
-}
-</script>
-
-<!-- Breadcrumb Schema -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"BreadcrumbList",
-"itemListElement":[
-{"@type":"ListItem","position":1,"name":"Home","item":"https://homerepairs4u.com/"},
-{"@type":"ListItem","position":2,"name":"Local Services","item":"https://homerepairs4u.com/local/"},
-{"@type":"ListItem","position":3,"name":"Gutter Services Sprotbrough","item":"https://homerepairs4u.com/local/gutter-services-sprotbrough-doncaster.html"}
-]
 }
 </script>
 
@@ -95,9 +81,13 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <h1>Gutter Clearing, Cleaning & Replacement in Sprotbrough, Doncaster</h1>
 
-<p>Home Repairs 4U provides professional gutter services for homeowners and small businesses across Sprotbrough. From routine gutter clearing and cleaning to repairs and full gutter replacement, we help protect your property from water damage, damp issues, and structural problems.</p>
+<p>
+Home Repairs 4U provides professional gutter services throughout Sprotbrough, helping homeowners and small businesses protect their properties from water damage. From routine gutter clearing to full gutter replacement, we offer reliable solutions designed to keep rainwater flowing safely away from your building.
+</p>
 
-<p>Blocked or damaged gutters are one of the most common causes of exterior property issues. Overflowing rainwater can lead to damp walls, damaged brickwork, rotting fascia boards, and water pooling around foundations. Our experienced team delivers reliable, cost-effective gutter solutions tailored to your property.</p>
+<p>
+Gutters play a vital role in protecting brickwork, roofs, and foundations. When they become blocked or damaged, rainwater can overflow and cause damp problems, staining, rot, and long-term structural issues. Our experienced team ensures your guttering system works efficiently in all weather conditions.
+</p>
 
 <h2>Instant Gutter Quote Calculator</h2>
 
@@ -131,9 +121,9 @@ const m=parseFloat(document.getElementById('metres').value);
 if(!m||m<=0){alert("Please enter a valid length.");return;}
 let total=0;
 let items=[];
-if(clearing.checked){let p=m*5; total+=p; items.push(`Gutter clearing: £${p.toFixed(2)}`);}
-if(cleaning.checked){let p=m*5; total+=p; items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
-if(replacement.checked){let p=m*21.5; total+=p; items.push(`Gutter replacement: £${p.toFixed(2)}`);}
+if(clearing.checked){let p=m*5;total+=p;items.push(`Gutter clearing: £${p.toFixed(2)}`);}
+if(cleaning.checked){let p=m*5;total+=p;items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
+if(replacement.checked){let p=m*21.5;total+=p;items.push(`Gutter replacement: £${p.toFixed(2)}`);}
 document.getElementById("quoteResult").innerHTML=
 items.length
 ? `<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`
@@ -141,39 +131,49 @@ items.length
 }
 </script>
 
-<h2>Why Gutter Maintenance Is Essential</h2>
-
-<p>Gutters play a critical role in directing rainwater safely away from your home. When they become blocked with leaves, moss, or debris, water can overflow and soak into brickwork or foundations. Regular gutter maintenance reduces the risk of damp, mould, and costly structural repairs.</p>
-
-<p>Properties in Sprotbrough are surrounded by trees and greenery, which increases the likelihood of seasonal blockages. Proactive clearing and cleaning ensures your gutters function properly all year round.</p>
-
 <h2>Our Gutter Services</h2>
 
 <h3>Gutter Clearing</h3>
-<p>We remove leaves, moss, silt, and debris from gutters using safe access equipment. Clearing restores proper water flow and prevents overflows during heavy rainfall.</p>
+<p>
+Gutter clearing removes leaves, moss, and debris that restrict water flow. This service is especially important in areas like Sprotbrough where trees and seasonal debris can quickly cause blockages.
+</p>
+
+<a href="#gutter-clearing-lightbox">
+<img src="/images/gutter-clearing.webp" alt="Gutter clearing in Sprotbrough Doncaster" class="service-image">
+</a>
+<div id="gutter-clearing-lightbox" class="lightbox"><a href="#"><img src="/images/gutter-clearing.webp" alt=""></a></div>
 
 <h3>Gutter Cleaning</h3>
-<p>Cleaning improves the appearance of gutters while removing grime and buildup that can cause long-term deterioration. This is ideal for properties where gutters are visible from ground level.</p>
+<p>
+External gutter cleaning improves appearance while removing built-up grime and algae. Clean gutters last longer and maintain a tidy finish on your property.
+</p>
 
-<h3>Gutter Repairs</h3>
-<p>Minor issues such as leaking joints, sagging sections, or loose brackets are repaired promptly to restore performance and prevent further damage.</p>
+<a href="#gutter-cleaning-lightbox">
+<img src="/images/gutter-cleaning.webp" alt="Gutter cleaning service in Sprotbrough Doncaster" class="service-image">
+</a>
+<div id="gutter-cleaning-lightbox" class="lightbox"><a href="#"><img src="/images/gutter-cleaning.webp" alt=""></a></div>
 
-<h3>Gutter Replacement</h3>
-<p>Where gutters are beyond repair, we offer full replacement using durable, modern materials. New guttering improves drainage, appearance, and long-term reliability.</p>
+<h3>Gutter Repairs & Replacement</h3>
+<p>
+Damaged joints, sagging sections, and cracked guttering can often be repaired. When repairs are no longer practical, we offer full gutter replacement using durable, modern materials.
+</p>
 
-<h2>Who We Work With</h2>
+<a href="#gutter-replacement-lightbox">
+<img src="/images/gutter-replacement.webp" alt="Gutter replacement in Sprotbrough Doncaster" class="service-image">
+</a>
+<div id="gutter-replacement-lightbox" class="lightbox"><a href="#"><img src="/images/gutter-replacement.webp" alt=""></a></div>
 
-<ul>
-<li>Homeowners maintaining their property</li>
-<li>Landlords preparing rentals</li>
-<li>Property managers</li>
-<li>Small businesses</li>
-<li>Home sellers improving kerb appeal</li>
-</ul>
+<h2>Why Regular Gutter Maintenance Matters</h2>
+
+<p>
+Regular gutter maintenance helps prevent damp, mould, brick staining, and foundation issues. Clearing and cleaning gutters before problems arise is far more cost-effective than repairing water damage later.
+</p>
 
 <h2>Book Gutter Services in Sprotbrough</h2>
 
-<p>If your gutters are overflowing, leaking, or showing signs of wear, contact Home Repairs 4U today. We provide dependable gutter clearing, cleaning, repairs, and replacement throughout Sprotbrough and surrounding areas.</p>
+<p>
+If your gutters are overflowing, leaking, or showing signs of wear, contact Home Repairs 4U today. We provide dependable gutter clearing, cleaning, repairs, and replacement throughout Sprotbrough and surrounding areas.
+</p>
 
 <div style="text-align:center;margin:36px 0;">
 <a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
