--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-sprotbrough-doncaster.html">
 
-<meta name="description" content="Reliable gutter clearing, cleaning, repairs and replacement in Sprotbrough, Doncaster. Protect your property from water damage. Call 07735 873694.">
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Sprotbrough, Doncaster. Protect your home from leaks, damp and water damage. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
@@ -49,7 +49,7 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "telephone":"+447735873694",
 "openingHours":"Mo-Su 07:00-20:00",
 "address":{"@type":"PostalAddress","addressRegion":"South Yorkshire","addressCountry":"GB"},
-"areaServed":["Sprotbrough","Doncaster","Scawthorpe","Bentley","Balby"],
+"areaServed":["Sprotbrough","Doncaster","Bentley","Scawthorpe","Balby"],
 "priceRange":"£50–£3000"
 }
 </script>
@@ -60,7 +60,7 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "@context":"https://schema.org",
 "@type":"Service",
 "name":"Gutter Services in Sprotbrough, Doncaster",
-"description":"Professional gutter clearing, cleaning, repairs and full gutter replacement for residential and small commercial properties in Sprotbrough.",
+"description":"Gutter clearing, cleaning, repairs and full gutter replacement for residential and small commercial properties in Sprotbrough.",
 "provider":{"@id":"https://homerepairs4u.com/#business"},
 "areaServed":{"@type":"Place","name":"Sprotbrough, Doncaster"},
 "serviceType":["Gutter clearing","Gutter cleaning","Gutter repairs","Gutter replacement"]
@@ -82,11 +82,11 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 <h1>Gutter Clearing, Cleaning & Replacement in Sprotbrough, Doncaster</h1>
 
 <p>
-Home Repairs 4U provides professional gutter services throughout Sprotbrough, helping homeowners and small businesses protect their properties from water damage. From routine gutter clearing to full gutter replacement, we offer reliable solutions designed to keep rainwater flowing safely away from your building.
+Home Repairs 4U provides dependable gutter services for properties throughout Sprotbrough. We help homeowners and small businesses prevent water damage through professional gutter clearing, exterior cleaning, repairs, and complete replacement where required.
 </p>
 
 <p>
-Gutters play a vital role in protecting brickwork, roofs, and foundations. When they become blocked or damaged, rainwater can overflow and cause damp problems, staining, rot, and long-term structural issues. Our experienced team ensures your guttering system works efficiently in all weather conditions.
+Guttering is designed to manage rainwater efficiently, but when it becomes blocked or damaged, water can overflow and soak into walls, rooflines, and foundations. Over time, this can lead to damp patches, mould growth, and costly structural repairs. Our service focuses on preventing these issues before they develop.
 </p>
 
 <h2>Instant Gutter Quote Calculator</h2>
@@ -135,7 +135,7 @@ items.length
 
 <h3>Gutter Clearing</h3>
 <p>
-Gutter clearing removes leaves, moss, and debris that restrict water flow. This service is especially important in areas like Sprotbrough where trees and seasonal debris can quickly cause blockages.
+Gutter clearing removes leaves, moss, and debris that restrict water flow. This service is particularly important in Sprotbrough, where nearby trees and seasonal weather can cause rapid build-up.
 </p>
 
 <a href="#gutter-clearing-lightbox">
@@ -145,7 +145,7 @@ Gutter clearing removes leaves, moss, and debris that restrict water flow. This 
 
 <h3>Gutter Cleaning</h3>
 <p>
-External gutter cleaning improves appearance while removing built-up grime and algae. Clean gutters last longer and maintain a tidy finish on your property.
+External gutter cleaning removes staining, algae, and surface grime. Clean guttering not only looks better but also reduces long-term wear caused by trapped moisture and dirt.
 </p>
 
 <a href="#gutter-cleaning-lightbox">
@@ -155,7 +155,7 @@ External gutter cleaning improves appearance while removing built-up grime and a
 
 <h3>Gutter Repairs & Replacement</h3>
 <p>
-Damaged joints, sagging sections, and cracked guttering can often be repaired. When repairs are no longer practical, we offer full gutter replacement using durable, modern materials.
+Minor issues such as leaking joints, loose brackets, or sagging sections can often be repaired. Where guttering has reached the end of its lifespan, we provide full replacement using durable materials designed for long-term reliability.
 </p>
 
 <a href="#gutter-replacement-lightbox">
@@ -166,13 +166,13 @@ Damaged joints, sagging sections, and cracked guttering can often be repaired. W
 <h2>Why Regular Gutter Maintenance Matters</h2>
 
 <p>
-Regular gutter maintenance helps prevent damp, mould, brick staining, and foundation issues. Clearing and cleaning gutters before problems arise is far more cost-effective than repairing water damage later.
+Routine gutter maintenance helps prevent damp, water staining, and damage to brickwork and timber. Addressing small issues early is far more cost-effective than repairing water damage after it occurs.
 </p>
 
 <h2>Book Gutter Services in Sprotbrough</h2>
 
 <p>
-If your gutters are overflowing, leaking, or showing signs of wear, contact Home Repairs 4U today. We provide dependable gutter clearing, cleaning, repairs, and replacement throughout Sprotbrough and surrounding areas.
+If your gutters are overflowing, leaking, or showing signs of deterioration, contact Home Repairs 4U today. We provide reliable gutter clearing, cleaning, repairs, and replacement throughout Sprotbrough and surrounding areas.
 </p>
 
 <div style="text-align:center;margin:36px 0;">
