--- a/test.html
+++ b/test.html
@@ -6,9 +6,9 @@
 
 <title>Gutter Clearing, Cleaning & Replacement in Sprotbrough, Doncaster | Home Repairs 4U</title>
 
-<link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-sprotbrough-doncaster.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-sprotbrough.html">
 
-<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Sprotbrough, Doncaster. Protect your home from leaks, damp and water damage. Call 07735 873694.">
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Sprotbrough, Doncaster. Prevent leaks, damp and water damage. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
@@ -41,29 +41,14 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 {
 "@context":"https://schema.org",
 "@type":"HomeAndConstructionBusiness",
-"@id":"https://homerepairs4u.com/#business",
 "name":"Home Repairs 4U",
 "url":"https://homerepairs4u.com/",
 "logo":"https://homerepairs4u.com/images/logo.webp",
 "image":"https://homerepairs4u.com/images/logo.webp",
 "telephone":"+447735873694",
 "openingHours":"Mo-Su 07:00-20:00",
-"address":{"@type":"PostalAddress","addressRegion":"South Yorkshire","addressCountry":"GB"},
-"areaServed":["Sprotbrough","Doncaster","Bentley","Scawthorpe","Balby"],
+"areaServed":["Sprotbrough","Doncaster","Scawthorpe","Bentley","Balby"],
 "priceRange":"£50–£3000"
-}
-</script>
-
-<!-- Service Schema -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"Service",
-"name":"Gutter Services in Sprotbrough, Doncaster",
-"description":"Gutter clearing, cleaning, repairs and full gutter replacement for residential and small commercial properties in Sprotbrough.",
-"provider":{"@id":"https://homerepairs4u.com/#business"},
-"areaServed":{"@type":"Place","name":"Sprotbrough, Doncaster"},
-"serviceType":["Gutter clearing","Gutter cleaning","Gutter repairs","Gutter replacement"]
 }
 </script>
 
@@ -82,11 +67,15 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 <h1>Gutter Clearing, Cleaning & Replacement in Sprotbrough, Doncaster</h1>
 
 <p>
-Home Repairs 4U provides dependable gutter services for properties throughout Sprotbrough. We help homeowners and small businesses prevent water damage through professional gutter clearing, exterior cleaning, repairs, and complete replacement where required.
+Home Repairs 4U provides reliable gutter services for properties throughout Sprotbrough. Our work focuses on keeping rainwater flowing safely away from your home, helping to prevent damp, leaks, and long-term structural issues.
 </p>
 
 <p>
-Guttering is designed to manage rainwater efficiently, but when it becomes blocked or damaged, water can overflow and soak into walls, rooflines, and foundations. Over time, this can lead to damp patches, mould growth, and costly structural repairs. Our service focuses on preventing these issues before they develop.
+Blocked or damaged guttering is one of the most common causes of water damage in residential properties. When gutters overflow, water can soak brickwork, penetrate rooflines, and damage fascia boards. Regular maintenance helps avoid these problems and protects the overall condition of your property.
+</p>
+
+<p>
+We work on houses, bungalows, and small commercial buildings across the area. Every job is approached with care, using safe access methods and appropriate equipment to deliver consistent results without unnecessary disruption.
 </p>
 
 <h2>Instant Gutter Quote Calculator</h2>
@@ -135,44 +124,44 @@ items.length
 
 <h3>Gutter Clearing</h3>
 <p>
-Gutter clearing removes leaves, moss, and debris that restrict water flow. This service is particularly important in Sprotbrough, where nearby trees and seasonal weather can cause rapid build-up.
+Gutter clearing removes leaves, moss, and debris that build up over time. This is particularly important in areas like Sprotbrough where nearby trees and changing weather conditions can cause rapid blockages.
 </p>
 
-<a href="#gutter-clearing-lightbox">
-<img src="/images/gutter-clearing.webp" alt="Gutter clearing in Sprotbrough Doncaster" class="service-image">
+<a href="#clear-lightbox">
+<img src="/images/pressure-wash-1.webp" alt="Gutter clearing service in Sprotbrough Doncaster" class="service-image">
 </a>
-<div id="gutter-clearing-lightbox" class="lightbox"><a href="#"><img src="/images/gutter-clearing.webp" alt=""></a></div>
+<div id="clear-lightbox" class="lightbox"><a href="#"><img src="/images/pressure-wash-1.webp" alt=""></a></div>
 
 <h3>Gutter Cleaning</h3>
 <p>
-External gutter cleaning removes staining, algae, and surface grime. Clean guttering not only looks better but also reduces long-term wear caused by trapped moisture and dirt.
+External gutter cleaning improves the appearance of your property by removing algae, staining, and built-up grime. Clean gutters also dry more effectively, helping to extend their lifespan.
 </p>
 
-<a href="#gutter-cleaning-lightbox">
-<img src="/images/gutter-cleaning.webp" alt="Gutter cleaning service in Sprotbrough Doncaster" class="service-image">
+<a href="#clean-lightbox">
+<img src="/images/patio-jet-wash.webp" alt="Gutter cleaning in Sprotbrough Doncaster" class="service-image">
 </a>
-<div id="gutter-cleaning-lightbox" class="lightbox"><a href="#"><img src="/images/gutter-cleaning.webp" alt=""></a></div>
+<div id="clean-lightbox" class="lightbox"><a href="#"><img src="/images/patio-jet-wash.webp" alt=""></a></div>
 
 <h3>Gutter Repairs & Replacement</h3>
 <p>
-Minor issues such as leaking joints, loose brackets, or sagging sections can often be repaired. Where guttering has reached the end of its lifespan, we provide full replacement using durable materials designed for long-term reliability.
+Loose joints, leaks, and sagging sections can often be repaired if addressed early. Where guttering is damaged beyond repair, we provide full replacement using durable materials designed for long-term reliability.
 </p>
 
-<a href="#gutter-replacement-lightbox">
-<img src="/images/gutter-replacement.webp" alt="Gutter replacement in Sprotbrough Doncaster" class="service-image">
+<a href="#replace-lightbox">
+<img src="/images/driveway-pressure-wash.webp" alt="Gutter replacement work in Sprotbrough Doncaster" class="service-image">
 </a>
-<div id="gutter-replacement-lightbox" class="lightbox"><a href="#"><img src="/images/gutter-replacement.webp" alt=""></a></div>
+<div id="replace-lightbox" class="lightbox"><a href="#"><img src="/images/driveway-pressure-wash.webp" alt=""></a></div>
 
-<h2>Why Regular Gutter Maintenance Matters</h2>
+<h2>Why Gutter Maintenance Is Important</h2>
 
 <p>
-Routine gutter maintenance helps prevent damp, water staining, and damage to brickwork and timber. Addressing small issues early is far more cost-effective than repairing water damage after it occurs.
+Well-maintained gutters help protect walls, foundations, and rooflines from water damage. Regular inspections and cleaning reduce the risk of unexpected repairs and help maintain the overall condition of your property.
 </p>
 
 <h2>Book Gutter Services in Sprotbrough</h2>
 
 <p>
-If your gutters are overflowing, leaking, or showing signs of deterioration, contact Home Repairs 4U today. We provide reliable gutter clearing, cleaning, repairs, and replacement throughout Sprotbrough and surrounding areas.
+If your gutters are overflowing, leaking, or showing signs of wear, Home Repairs 4U is here to help. We provide dependable gutter clearing, cleaning, repairs, and replacement throughout Sprotbrough and surrounding areas.
 </p>
 
 <div style="text-align:center;margin:36px 0;">
