--- a/test.html
+++ b/test.html
@@ -127,10 +127,10 @@ items.length
 Gutter clearing removes leaves, moss, and debris that build up over time. This is particularly important in areas like Sprotbrough where nearby trees and changing weather conditions can cause rapid blockages.
 </p>
 
-<a href="#clear-lightbox">
-<img src="/images/pressure-wash-1.webp" alt="Gutter clearing service in Sprotbrough Doncaster" class="service-image">
+<a href="#clearing-lightbox">
+<img src="/images/clearing-service.webp" alt="Gutter clearing service in Sprotbrough Doncaster" class="service-image">
 </a>
-<div id="clear-lightbox" class="lightbox"><a href="#"><img src="/images/pressure-wash-1.webp" alt=""></a></div>
+<div id="clear-lightbox" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt=""></a></div>
 
 <h3>Gutter Cleaning</h3>
 <p>
