--- a/test.html
+++ b/test.html
@@ -137,10 +137,10 @@ Gutter clearing removes leaves, moss, and debris that build up over time. This i
 External gutter cleaning improves the appearance of your property by removing algae, staining, and built-up grime. Clean gutters also dry more effectively, helping to extend their lifespan.
 </p>
 
-<a href="#clean-lightbox">
-<img src="/images/patio-jet-wash.webp" alt="Gutter cleaning in Sprotbrough Doncaster" class="service-image">
+<a href="#cleaned-lightbox">
+<img src="/images/cleaned-gutters.webp" alt="Gutter cleaning in Sprotbrough Doncaster" class="service-image">
 </a>
-<div id="clean-lightbox" class="lightbox"><a href="#"><img src="/images/patio-jet-wash.webp" alt=""></a></div>
+<div id="cleaned-lightbox" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a></div>
 
 <h3>Gutter Repairs & Replacement</h3>
 <p>
