--- a/test.html
+++ b/test.html
@@ -147,10 +147,10 @@ External gutter cleaning improves the appearance of your property by removing al
 Loose joints, leaks, and sagging sections can often be repaired if addressed early. Where guttering is damaged beyond repair, we provide full replacement using durable materials designed for long-term reliability.
 </p>
 
-<a href="#replace-lightbox">
-<img src="/images/driveway-pressure-wash.webp" alt="Gutter replacement work in Sprotbrough Doncaster" class="service-image">
+<a href="#replaced-lightbox">
+<img src="/images/replaced-gutter.webp" alt="Gutter replacement work in Sprotbrough Doncaster" class="service-image">
 </a>
-<div id="replace-lightbox" class="lightbox"><a href="#"><img src="/images/driveway-pressure-wash.webp" alt=""></a></div>
+<div id="replaced-lightbox" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt=""></a></div>
 
 <h2>Why Gutter Maintenance Is Important</h2>
 
